# Lynx-AL5X-Controller

./: CMakeLists.txt  README.md  package.xml
config/: fake_controllers.yaml  kinematics.yaml  lynxmotion_4d.srdf  ompl_planning.yaml
launch/: default_warehouse_db.launch  fake_moveit_controller_manager.launch.xml  ik.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  teleop.launch  trajectory_execution.launch.xml  warehouse.launch
msg/: JoystickValues.msg
rviz/: urdf.rviz
scripts/: ard_control.py  js_control.py  js_pub.py  rad2deg.py
urdf/: lynx.urdf
